# task

./: .gitignore  .gitpod.yml  .releaserc   CHANGELOG.md  DEPRECATED_setup.cfg  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yaml  publish.yml
task/: __init__.py  processor.py
task/tests/: test_processor.py
tests/: __init__.py  test_processor.py
