[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "twine", "python-semantic-release", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "ourtask_task"
authors = [
    {name = "Willem van Heemstra", email = "wvanheemstra@icloud.com"},
]
description = "A simple JSON processing package."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["task"]
license = {text = "MIT"}
classifiers = [
#    "Framework :: Flask",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]

[project.optional-dependencies]

[project.scripts]

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/